# zk-snarks-with-substrate

./: Cargo.toml
pallets/zk-snarks/: Cargo.toml
pallets/zk-snarks/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
